--- a/docs-src/src/css/custom.css
+++ b/docs-src/src/css/custom.css
@@ -1,3 +1,4 @@
+@import "./override/details.css";
 /* stylelint-disable docusaurus/copyright-header */
 /**
  * Any CSS included here will be global. The classic template
