--- a/docs-src/src/css/override/details.css
+++ b/docs-src/src/css/override/details.css
@@ -11,6 +11,17 @@
   border-top: 1px solid var(--kognic-lavender) !important;
 }
 
+.details_node_modules-\@docusaurus-theme-classic-lib-theme-Details-styles-module {
+  background-color: white;
+  border-color: var(--kognic-lavender);
+}
+
+.details_node_modules-\@docusaurus-theme-classic-lib-theme-Details-styles-module {
+  h2 {
+    margin: 0;
+  }
+}
+
 .alert a {
   color: var(--kognic-lavender);
   text-decoration-color: var(--kognic-lavender);
