--- a/docs-src/src/css/override/details.css
+++ b/docs-src/src/css/override/details.css
@@ -2,31 +2,65 @@
  * When using Docosaurus <details> tag, our theme colors are not applied.
  * This is required to apply our theme colors to content inside the <details> tag.
  */
-.tabs .tabs__item--active {
-  color: var(--kognic-lavender);
-  border-bottom-color: var(--kognic-lavender);
-}
 
 details {
-  background-color: white !important;
-  border: 1px solid var(--kognic-lavender) !important;
-
   /* Fixes margin jumping around when expanding/collapsing */
   h2 {
     margin: 0;
   }
+}
 
-  /* Override horizontal line */
-  [class^="collapsibleContent"] {
-    border-top: 1px solid var(--kognic-lavender) !important;
+/* Light mode */
+[data-theme="light"] {
+  details {
+    background-color: white !important;
+    border: 1px solid var(--kognic-lavender) !important;
+
+    .tabs {
+      color: #525860;
+    }
+
+    .tabs .tabs__item--active {
+      color: var(--kognic-lavender);
+      border-bottom-color: var(--kognic-lavender);
+    }
+
+    .alert a {
+      color: var(--kognic-lavender);
+      text-decoration-color: var(--kognic-lavender);
+    }
+
+    /* Override horizontal line */
+    [class^="collapsibleContent"] {
+      border-top: 1px solid var(--kognic-lavender) !important;
+    }
   }
 }
 
-.alert a {
-  color: var(--kognic-lavender);
-  text-decoration-color: var(--kognic-lavender);
-}
+/* Dark mode */
+[data-theme="dark"] {
+  details {
+    background-color: var(--kognic-black) !important;
+    border: 1px solid var(--kognic-green) !important;
 
-.tabs {
-  color: #525860;
+    .tabs .tabs__item--active {
+      color: var(--kognic-green);
+      border-bottom-color: var(--kognic-green);
+    }
+
+    .tabs .tabs__item--active {
+      color: var(--kognic-green);
+      border-bottom-color: var(--kognic-green);
+    }
+
+    .alert a {
+      color: var(--kognic-green);
+      text-decoration-color: var(--kognic-green);
+    }
+
+    /* Override horizontal line */
+    [class^="collapsibleContent"] {
+      border-top: 1px solid var(--kognic-green) !important;
+    }
+  }
 }
