--- a/docs-src/src/css/custom.css
+++ b/docs-src/src/css/custom.css
@@ -37,4 +37,4 @@ html[data-theme="dark"] {
   --ifm-background-surface-color: var(--kognic-black);
 }
 
-@import "./override/details.css";
+@import "override/details.css";
