--- a/docs-src/src/css/custom.css
+++ b/docs-src/src/css/custom.css
@@ -62,3 +62,18 @@ article div details[class^="details"] {
     border-top: 1px solid var(--ifm-color-primary);
   }
 }
+
+/* Better sidebar { */
+.menu a:not([href]).menu__link {
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+  color: black;
+  font-size: 0.8rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+html[data-theme="dark"] .menu a:not([href]).menu__link {
+  color: grey;
+}
+/* } */
